<resources>
    <string name="app_name">WhosPlayin</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register (Fragment)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Strings related to the navbar drawer-->
    <string name="title_activity_friend_profile">FriendProfileActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="misc_menu_settings">Settings</string>
    <string name="misc_menu_help">Help</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_profile_title">My Profile</string>
    <string name="nav_friends_title">Friends List</string>
    <string name="nav_events_title">My Events</string>
    <string name="nav_messages_title">Messages</string>
    <string name="nav_achievements_title">My Achievements</string>
    <string name="nav_discover_title">Discover</string>
    <string name="nav_home2_title">Home</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="action_register_activity">Register</string>
    <string name="title_activity_logout">LogoutActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_report">ReportActivity</string>

<<<<<<< HEAD
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

=======
>>>>>>> parent of 3f38c9a... Merge branch 'rick_user_profile_view'

    <!--Strings for the Misc. Menu-->


    </resources>
